--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -11,15 +11,15 @@
         android:layout_alignParentStart="true"/>
 
     <TextView
+        android:id="@+id/activity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/activity_title"
         android:layout_centerInParent="true"/>
 
     <Button
+        android:id="@+id/filter_menu"
         android:layout_width="@dimen/header_height"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/filter_menu" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
