From screen: Styles in Andriod

--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -11,6 +11,7 @@
         android:background="@android:color/darker_gray"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:backgroundTint="@color/colorPrimary"
         android:id = "@+id/new_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
