--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -14,6 +14,7 @@
 
         <EditText
             android:id="@+id/todo_title"
+            style="@style/edit_text_transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/title"
@@ -27,6 +28,7 @@
 
             <Button
                 android:id="@+id/pick_date"
+                style="@style/simple_button_green"
                 android:text="@string/pick_a_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -34,6 +36,7 @@
 
             <Button
                 android:id="@+id/pick_tme"
+                style="@style/simple_button_green"
                 android:text="@string/pick_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -43,6 +46,7 @@
 
         <EditText
             android:id="@+id/todo_content"
+            style="@style/edit_text_gery_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="top"
