--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -13,6 +13,8 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:backgroundTint="@color/colorPrimary"
         android:id = "@+id/new_item"
+        android:src="@drawable/ic_add_black_24dp"
+        android:scaleType="centerInside"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
