--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,10 +14,12 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:tag">@string/tag_font_bold</item>
     </style>
 
     <style name="simple_button_green" parent="simple_button">
         <item name="android:background">@drawable/selector_button_green</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
 
     <style name="simple_button_grey" parent="simple_button">
@@ -37,5 +39,6 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/grey_text_light</item>
     </style>
+
 
 </resources>
